# RayTracer

./: .gitignore  CMakeLists.txt  README.md
demo1/: projectile_test.cpp
demo2/: clock.cpp
demo3/: shadow.cpp
demo4/: demo4.cpp  demo4.cpp.old  demo4.cpp.old1
demos/: projectile_test.cpp
include/: bvh.h  camera.h  canvas.h  color.h  intersection.h  lights.h  materials.h  matrix.h  parser.h  pattern.h  point.h  ray.h  shape.h  shapes.h  sphere.h  tools.h  transformations.h  tuple.h  vector.h  world.h
main/: dragon.cpp  main.cpp
src/: bvh.cpp  camera.cpp  canvas.cpp  color.cpp  intersection.cpp  lights.cpp  materials.cpp  matrix.cpp  parser.cpp  pattern.cpp  point.cpp  projectile.cpp  ray.cpp  shape.cpp  shapes.cpp  sphere.cpp  tests.cpp  tools.cpp  transformations.cpp  tuple.cpp  vector.cpp  world.cpp
tests/: tests.cpp  tests_bvh.cpp  tests_canvas.cpp  tests_lights_and_mats.cpp  tests_matrix.cpp  tests_parser.cpp  tests_ray.cpp  tests_shapes.cpp  tests_sphere.cpp  tests_trans.cpp  tests_tuple.cpp  tests_world_camera.cpp
